--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,51 @@
-body{
-    background-color: #fff;
-    color: black;
-    font-size: 16px;
-    font-family: 'El Messiri', sans-serif;
+body {
+  background-color: #fff;
+  color: black;
+  font-size: 16px;
+  font-family: "El Messiri", sans-serif;
 }
+
 header {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
 .navbar {
-    display: flex;
-    
-}
-.logo {
-    display: flex;
+  display: flex;
 }
 
-.logo img{
+.logo {
+  display: flex;
+}
+
+.logo img {
   border: 4px solid;
   border-radius: 50px;
   width: 85px;
 }
 
 .list {
-    display: flex;
+  display: flex;
 }
 
 .list-item {
-    padding: 1rem 2rem;
+  padding: 1rem 2rem;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 9rem;
-  }
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 9rem;
+}
 
 .grid-item {
   padding: 20px;
@@ -53,13 +54,13 @@ a{
 }
 
 .imageDiv img {
-    border: 4px solid;
+  border: 4px solid;
 }
 
 footer {
-    border-top: 2px solid;
+  border-top: 2px solid;
 }
 
 .footer-container {
-    margin-left: 20px;
+  margin-left: 20px;
 }
