--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+    background-color: gainsboro;
+}
+
 body {
   background-color: #fff;
   color: black;
@@ -59,6 +63,8 @@ a {
 
 footer {
   border-top: 2px solid;
+  border-bottom: 2px solid;
+  margin-bottom: 20px;
 }
 
 .footer-container {
