--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,115 @@
-body{
-    background-color: yellow;
+html {
+  font-size: 16px;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  color: #000;
+  width: 100%;
+  height: auto;
+  margin-bottom: 5rem;
+  background: #4682B4;
+}
+main {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-flow: column nowrap;
+}
+.display-container {
+  width: 90%;
+  max-width: 800px;
+  height: auto;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+}
+.container {
+  width: 95%;
+  height: auto;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 3px 3px 30px 3px rgb(106, 107, 106);
+}
+h1 {
+  color: #fff;
+  font-weight: 200;
+  font-size: 2.15rem;
+}
+h2 {
+  width: 90%;
+  font-weight: 100;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h3 {
+  width: fit-content;
+}
+h3:nth-child(1) {
+  margin-left: 80px;
+}
+h3:nth-child(3) {
+  margin-right: 80px;
+}
+.col-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.col-footer {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0;
+  align-self: flex-end;
+  color: rgb(102, 99, 99);
+}
+#character-list {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+}
+.picture {
+  max-width: 50px;
+  height: auto;
+  margin-right: 80px;
+}
+.character {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: rgb(204, 202, 202) 1px solid;
+  padding: 0 30px 0 -30px;
+}
+.Character-id {
+  margin-left: 80px;
+}
+.navigation-keys {
+  width: 5rem;
+}
+span {
+  height: 100%;
+  width: 50%;
+  font-size: 2rem;
+  margin-right: 1rem;
+}
+.pages {
+  width: 10rem;
+  height: 100%;
+  display: flex;
+  font-size: 0.7rem;
+}
+label,
+select {
+  font-size: 0.9rem;
+  margin-bottom: 0;
 }
