Modal character addedd

--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,18 @@ nav {
   display: block;
 }
 
+.pictureModal {
+  margin: auto;
+  padding-bottom: 5px;
+  width: 200px;
+  height: auto;
+  display: block;
+}
+
+.Character-namesModal {
+  width: 100%;
+  text-align: center;
+}
 .character {
   width: 100%;
   height: auto;
@@ -178,3 +190,46 @@ select {
   font-size: 0.9rem;
   margin-bottom: 0;
 }
+
+.modal {
+  position: absolute;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  opacity: 1;
+}
+
+.characterModal {
+  width:30%;
+  min-width: 350px;
+  height: 150%;
+  margin: auto;
+}
+
+.modalDetail {
+  margin: auto;
+  
+
+}
+
+.Ffield{
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  height: fit-content;
+  margin: 0;
+  padding: 0;
+}
+.TTitle {
+  width: 10rem;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+   margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+.record {
+  width: 30rem;
+    display:flex;
+  }
