--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   font-size: 16px;
+
 }
 
 body {
@@ -177,4 +178,14 @@ label,
 select {
   font-size: 0.9rem;
   margin-bottom: 0;
+}
+
+footer {
+  border-top: 3px solid #000;
+  border-bottom: 3px solid #000;
+}
+
+footer p {
+  margin-left: 24px;
+  padding: 4px;
 }
