--- a/src/index.css
+++ b/src/index.css
@@ -120,8 +120,7 @@ nav {
 
 .pictureModal {
   margin: auto;
-  padding-bottom: 5px;
-  width: 200px;
+  width: 37%;
   height: auto;
   display: block;
 }
@@ -203,6 +202,7 @@ footer p {
 }
 
 .modal {
+  display: none;
   position: absolute;
   margin: auto;
   width: 100%;
@@ -212,14 +212,21 @@ footer p {
 }
 
 .characterModal {
-  width: 30%;
-  min-width: 350px;
-  height: 150%;
-  margin: auto;
+margin: auto;
 }
 
 .modalDetail {
   margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#btnClose {
+  float: right;
+  background-color: #fff;
+  border: none;
+  font-weight: 900;
+  font-size: 2rem;
 }
 
 .Ffield {
@@ -230,11 +237,6 @@ footer p {
 }
 
 .TTitle {
-  width: 10rem;
-  font-size: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
   margin-bottom: 10px;
 }
 
